force-app/main/default/objects/Lease_Exposure__c/fields/Est_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Est_Property_Tax__c</fullName>
    <label>Est Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>