force-app/main/default/objects/Lease_Exposure__c/fields/Estimated_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Property_Tax__c</fullName>
    <formula>LS_Contract__r.Exposure_Estimated_Property_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>