force-app/main/default/objects/Lease_Exposure__c/fields/Net_Investment__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment__c</fullName>
    <formula>Rent_Billed_Not_Paid__c + Outstanding_Rent__c + Residual_Amount__c - Unearned_Income__c - Unearned_Residual__c + Service_Fees__c + Total_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>