force-app/main/default/objects/Lease_Exposure__c/fields/Tax_on_Rent_Billed_Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tax_on_Rent_Billed_Not_Paid__c</fullName>
    <label>Tax on Rent Billed Not Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>