force-app/main/default/objects/Lease_Exposure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exposure__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exposure__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>